--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,29 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <name>uvl-parser</name>
+    <description>Parser for the universal variability language</description>
+    <url>https://github.com/FeatJAR/uvl-parser</url>
+    <inceptionYear>2020</inceptionYear>
+    <developers>
+        <developer>
+            <name>Dominik Engelhardt</name>
+        </developer>
+    </developers>
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+            <comments>mit</comments>
+        </license>
+    </licenses>
+
     <groupId>org.spldev</groupId>
     <artifactId>uvl-parser</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>clojure</packaging>
-
-    <name>UVL Parser</name>
-    <description>Small default parser lib for UVL</description>
-    <url>https://github.com/Universal-Variability-Language/uvl-parser</url>
 
     <build>
         <sourceDirectory>java</sourceDirectory>
