--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         </license>
     </licenses>
 
-    <groupId>org.spldev</groupId>
+    <groupId>de.featjar</groupId>
     <artifactId>uvl-parser</artifactId>
     <version>1.0-SNAPSHOT</version>
 
